added functions to js

--- a/index.html
+++ b/index.html
@@ -17,38 +17,43 @@
             <input id="search-input" required></input>
             <button id="search-button">Search</button>
             <div id="pokemon-characteristic">
-              <p id="pokemon-name"></p>
-              <p id="pokemon-id"></p>
-              <p id="weight"></p>
-              <p id="height"></p>
-              <p id="types"></p>
             </div>
             <div>
                 <table>
-                    <thead>
-                        <tr>
-                            <th id="topics">Base</th>
-                            <th id="avatars">Stats</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>HP:</td>
-                            <td>Attack:</td>
-                            <td>Defense:</td>
-                            <td>SP.Attack:</td>
-                            <td>SP.Defense:</td>
-                            <td>Speed:</td>
-                        </tr>
-                        <tr id="stats">
-                           <td id="hp"></td>
-                            <td id="attack"></td>
-                            <td id="defense"></td>
-                            <td id="special-attack"></td>
-                            <td id="special-defense"></td>
-                            <td id="speed"></td>
-                        </tr>
-                    </tbody>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th id="topics">Base</th>
+                                <th id="avatars">Stats</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>HP:</th>
+                                <td id="hp"></td>
+                            </tr>
+                            <tr>
+                                <th>Attack:</th>
+                                <td id="attack"></td>
+                            </tr>
+                            <tr>
+                                <th>Defense:</th>
+                                <td id="defense"></td>
+                            </tr>
+                            <tr>
+                                <th>SP. Attack:</th>
+                                <td id="sp-attack"></td>
+                            </tr>
+                            <tr>
+                                <th>SP. Defense:</th>
+                                <td id="sp-defense"></td>
+                            </tr>
+                            <tr>
+                                <th>Speed:</th>
+                                <td id="speed"></td>
+                            </tr>
+                        </tbody>
+                    </table>                    
                 </table>
             </div>
         </main>
