added a funtion to get all the element id & modified updatePokemonValue() accordingly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <input id="search-input" required></input>
             <button id="search-button">Search</button>
             <div id="pokemon-characteristic">
+                <p id="pokemon-name"></p>
+                <p id="pokemon-id"></p>
+                <p id="weight"></p>
+                <p id="height"></p>
+                <img id="pokemon-image" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon" alt="Pokemon Image" />
+                <p id="types"></p>
             </div>
             <div>
                 <table>
